Fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ a {
   text-decoration: none;
 }
 
-/** global classes styling **/
+
 
 .container {
   max-width: 1000px;
@@ -46,6 +46,7 @@ a {
 
 .grid {
   display: flex;
+  padding: 10px;
 }
 
 header {
@@ -151,9 +152,10 @@ nav > ul {
   max-width: 150px;
   width: 100%;
   height: 30px;
-  margin: 15px 0;
+  margin: 15px;
   border: 0;
   background-color: #f1c40f;
+  text-align: center;
 }
 
 #hero input[type='submit']:hover {
